--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="views/Home/Home.controller.js"></script>
     <script src="views/category/category-list.controller.js"></script>
     <script src="views/category/category-add.controller.js"></script>
+    <script src="views/shop/shop.controller.js"></script>
   </head>
 
   <body ng-app="starter">
